@@ -1,3 +1,8 @@
+Sat May 23 11:52:03 GMT 2015  Olly Betts <olly@survex.com>
+
+	* tests/harness/backendmanager_remotetcp.cc: Don't leave an extra fd
+	  open when starting xapian-tcpsrv for remotetcp tests.
+
 Sat May 23 10:12:31 GMT 2015  Olly Betts <olly@survex.com>
 
 	* tests/harness/backendmanager_remotetcp.cc: Add spaces between literal
